3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugin/plugin_python.c, plugin/include/plugin_python.h: Remove spell wrapper
   functions.
plugin/plugin_python.c, plugin/include/plugin_python.h: Replace skill-IDs by
   skill names. Remove skill-ID wrapper functions.
Andreas Kirschbaum 2005-02-20

------------------------------------------------------------------------------
Changes for 1.7.0:

configure, configure.ac, include/autoconf.h.in:  Update for
   version 1.7.0.  Add check for libz - needed by libpng (at least on my
   system), which is needed for the editor.
MSW 2005-01-23

common/object.c: Change CAN_MERGE() from an inline function, since
   it calls itself and inline functions are not supposed to do that.
   Update type check in insert_ob_in_map() to check against defined
   type (EXIT) instead of hardcoded integer value (66).
crossedit/xutil.c:  Update to just include Defines.h, which then includes
   all the other necessary files, including global.h.
include/global.h: Add #ifdef checks for the UINT*_MAX types, as some
   systems already define these values, which results in a redefinition
   error.  Also fix up // style comment.
include/shstr.h: Include proper cast in TOPBIT definition.
server/main.c: Don't display 'xyz left the game' messages if the player
   is only at the get name or get password prompt.  Prevents possible
   spoofing of that message.
server/player.c: Clean up formatting of check_pick() function.  If player
   is using newpickup to pick up booze, also pick up poison unless
   they know it is cursed.
socket/request.c: AskSmooth() - change buffer type to uint8 so that
   it matches what the SockList structure wants.